--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb://localhost:27017/MediFood
+MONGO_URI=mongodb+srv://swarajm:123@cluster0.3ttx5.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=swaraj_MediFood
 PORT=5000
-YOUR_GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyCbcKwhxD7AUmZtjrnFfLMNMdRO2U5_WYI
