--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.16.0",
     "lucide-react": "^0.469.0",
     "react": "^19.0.0",
